--- a/certificate-pr/src/assets/styles/_common.scss
+++ b/certificate-pr/src/assets/styles/_common.scss
@@ -70,11 +70,11 @@ a{
         display: none;
     }
 }
-@media only screen and (max-width: 992px){
-    #components{
-        display: none;
-    }
-}
+// @media only screen and (max-width: 992px){
+//     #components{
+//         display: none;
+//     }
+// }
 .style-1{
     transform: translateX(0) !important;
 }
