Contact section started

--- a/certificate-pr/src/assets/styles/component/_header-nav.scss
+++ b/certificate-pr/src/assets/styles/component/_header-nav.scss
@@ -68,7 +68,7 @@ margin-top: 25px;
                     padding: 5px;
                     .card{
                         width: 100%;
-                        height: 100%;
+                        // height: 100%;
                         margin-bottom: 5px;
                         .img-area{
                             height: 60%;
