--- a/certificate-pr/src/assets/styles/_common.scss
+++ b/certificate-pr/src/assets/styles/_common.scss
@@ -254,7 +254,11 @@ a{
 }
 
 
-
+.rafet{
+    background-color: orangered !important;
+    color: white !important;
+    border: 1px solid white !important;
+}
 
 
 
