--- a/certificate-pr/src/assets/styles/_mixin.scss
+++ b/certificate-pr/src/assets/styles/_mixin.scss
@@ -78,8 +78,9 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                
+                margin-left: 10px;
                 transition: 1s;
+                cursor: pointer;
             }
         }
 
@@ -108,4 +109,9 @@
 
     }
     
+}
+
+
+.owl-carousel{
+    display: flex !important;
 }
