--- a/certificate-pr/src/assets/styles/pages/_home.scss
+++ b/certificate-pr/src/assets/styles/pages/_home.scss
@@ -541,7 +541,7 @@
 }
 #components{
     background: #F2F2F2;
-    height: 100%;
+    
     
     .custom-container{
        
@@ -589,6 +589,9 @@
                }
             }
             .col-lg-6{
+                .owl-carousel{
+                    height: 100%;
+                }
                 padding: 0;
                
                    .img-area{
