DarkLight mode completed

--- a/certificate-pr/src/assets/styles/_common.scss
+++ b/certificate-pr/src/assets/styles/_common.scss
@@ -264,6 +264,17 @@ a{
 
 
 
+@media only screen and (min-width: 768px){
+    .bascet-card{
+        .card{
+            margin-right: 0 !important;
+        }
+    }
+}
+
+
+
+
 
 
 
